force-app/main/default/objects/Case__c/fields/Case_Cancelled__c.field-meta.xml
<CustomField>
    <fullName>Case_Cancelled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Cancelled</label>
    <type>Checkbox</type>
</CustomField>