force-app/main/default/objects/Case__c/fields/Case_Discontinued__c.field-meta.xml
<CustomField>
    <fullName>Case_Discontinued__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Case Discontinued</label>
    <type>Checkbox</type>
</CustomField>