force-app/main/default/objects/Case__c/fields/Case_SLA__c.field-meta.xml
<CustomField>
    <fullName>Case_SLA__c</fullName>
    <formula>IF(ISPICKVAL(Case_Type__c, &apos;Tier 5&apos;), IF(TODAY()- DATEVALUE(CreatedDate) &lt; 15,&apos;#90cf55&apos;,IF((TODAY() -  DATEVALUE(CreatedDate) &gt; 15 &amp;&amp; TODAY() -  DATEVALUE(CreatedDate) &lt; 22),&apos;#fefe00&apos;,IF((TODAY() -  DATEVALUE(CreatedDate) &gt; 22 &amp;&amp; TODAY() -  DATEVALUE(CreatedDate) &lt; 32),&apos;#fbbd03&apos;,IF((TODAY() -  DATEVALUE(CreatedDate) &gt; 32 &amp;&amp; TODAY() -  DATEVALUE(CreatedDate) &lt; 40),&apos;#ffbee6&apos;,IF(TODAY() -  DATEVALUE(CreatedDate) &gt; 40 ,&apos;#fd0708&apos;,&apos;&apos; ) )) )),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Case SLA</label>
    <type>Text</type>
</CustomField>