force-app/main/default/objects/Case__c/fields/costpoint_code__c.field-meta.xml
<CustomField>
    <fullName>costpoint_code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>costpoint code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>