force-app/main/default/objects/Case__c/fields/Initiated_State_Date__c.field-meta.xml
<CustomField>
    <fullName>Initiated_State_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Initiated State Date</label>
    <type>Date</type>
</CustomField>