force-app/main/default/objects/Case__c/fields/PPF_Customer_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>PPF_Customer_Contact_Email__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>PPF Customer Contact Email</label>
    <type>Email</type>
</CustomField>