force-app/main/default/objects/Case__c/fields/Subject_Email__c.field-meta.xml
<CustomField>
    <fullName>Subject_Email__c</fullName>
    <formula>Contact__r.Email__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Email</label>
    <type>Text</type>
</CustomField>