force-app/main/default/objects/Case__c/fields/Subject_Name__c.field-meta.xml
<CustomField>
    <fullName>Subject_Name__c</fullName>
    <formula>Contact__r.Last_Name__c + &apos; &apos; +Contact__r.First_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subject Name</label>
    <type>Text</type>
</CustomField>