force-app/main/default/objects/Case__c/fields/Supplemental_Date_requested__c.field-meta.xml
<CustomField>
    <fullName>Supplemental_Date_requested__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Supplemental Date requested</label>
    <type>Date</type>
</CustomField>